--- a/config/crd/bases/windtunnel.plantd.org_simulations.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_simulations.yaml
@@ -48,8 +48,84 @@ spec:
             description: SimulationSpec defines the desired state of Simulation
             properties:
               digitalTwinRef:
-                description: DigitalTwinRef defines the DigitalTwin object reference
-                  for the Simulation.
+                description: DigitalTwin object for the Simulation.
+                properties:
+                  apiVersion:
+                    description: API version of the referent.
+                    type: string
+                  fieldPath:
+                    description: 'If referring to a piece of an object instead of
+                      an entire object, this string should contain a valid JSON/Go
+                      field access statement, such as desiredState.manifest.containers[2].
+                      For example, if the object reference is to a container within
+                      a pod, this would take on a value like: "spec.containers{name}"
+                      (where "name" refers to the name of the container that triggered
+                      the event) or if no container name is specified "spec.containers[2]"
+                      (container with index 2 in this pod). This syntax is chosen
+                      only to have some well-defined way of referencing a part of
+                      an object. TODO: this design is not final and this field is
+                      subject to change in the future.'
+                    type: string
+                  kind:
+                    description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                    type: string
+                  name:
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                    type: string
+                  namespace:
+                    description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                    type: string
+                  resourceVersion:
+                    description: 'Specific resourceVersion to which this reference
+                      is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                    type: string
+                  uid:
+                    description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
+              netCostRef:
+                description: NetCost object for the Simulation. Optional.
+                properties:
+                  apiVersion:
+                    description: API version of the referent.
+                    type: string
+                  fieldPath:
+                    description: 'If referring to a piece of an object instead of
+                      an entire object, this string should contain a valid JSON/Go
+                      field access statement, such as desiredState.manifest.containers[2].
+                      For example, if the object reference is to a container within
+                      a pod, this would take on a value like: "spec.containers{name}"
+                      (where "name" refers to the name of the container that triggered
+                      the event) or if no container name is specified "spec.containers[2]"
+                      (container with index 2 in this pod). This syntax is chosen
+                      only to have some well-defined way of referencing a part of
+                      an object. TODO: this design is not final and this field is
+                      subject to change in the future.'
+                    type: string
+                  kind:
+                    description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                    type: string
+                  name:
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                    type: string
+                  namespace:
+                    description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                    type: string
+                  resourceVersion:
+                    description: 'Specific resourceVersion to which this reference
+                      is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                    type: string
+                  uid:
+                    description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                    type: string
+                type: object
+                x-kubernetes-map-type: atomic
+              scenarioRef:
+                description: Scenario object for the Simulation. The task names in
+                  the Scenario must be the name of a Schema in the DataSet used by
+                  the DigitalTwin. Mandatory if the `digitalTwinType` field of the
+                  DigitalTwin is `schemaaware`. Always ignored otherwise.
                 properties:
                   apiVersion:
                     description: API version of the referent.
@@ -86,8 +162,7 @@ spec:
                 type: object
                 x-kubernetes-map-type: atomic
               trafficModelRef:
-                description: TrafficModelRef defines the TrafficModel object reference
-                  for the Simulation.
+                description: TrafficModel object for the Simulation.
                 properties:
                   apiVersion:
                     description: API version of the referent.
@@ -129,19 +204,6 @@ spec:
             type: object
           status:
             description: SimulationStatus defines the observed state of Simulation
-            properties:
-              digitalTwinState:
-                description: DigitalTwinState is the state of the DigitalTwin.
-                type: string
-              jobStatus:
-                description: JobStatus is the status of the digital twin job.
-                type: string
-              podName:
-                description: PodName is the pod name of the digital twin job.
-                type: string
-              trafficModalState:
-                description: TrafficModelState is the state of the TrafficModel.
-                type: string
             type: object
         type: object
     served: true
