--- a/config/crd/bases/windtunnel.plantd.org_datasets.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_datasets.yaml
@@ -137,6 +137,7 @@ spec:
                   - name
                   - numRecords
                   type: object
+                maxItems: 65535
                 minItems: 1
                 type: array
               storageSize:
