--- a/config/crd/bases/windtunnel.plantd.org_plantdcores.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_plantdcores.yaml
@@ -175,6 +175,10 @@ spec:
               prometheus:
                 description: Prometheus configuration.
                 properties:
+                  image:
+                    description: Container image to use. Should be synced with the
+                      `version` field.
+                    type: string
                   replicas:
                     description: Number of replicas.
                     format: int32
@@ -232,6 +236,10 @@ spec:
                   scrapeInterval:
                     description: Interval at which Prometheus scrapes metrics.
                     pattern: ^(0|(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?)$
+                    type: string
+                  version:
+                    description: Prometheus version. Should be synced with the `image`
+                      field.
                     type: string
                 type: object
               proxy:
