--- a/config/plantd/config.yaml
+++ b/config/plantd/config.yaml
@@ -47,7 +47,7 @@ core:
       plantd-app: proxy
     defaultReplicas: 1
     defaultImage: ghcr.io/carnegiemellon-plantd/plantd-proxy:latest
-    defaultCPURequest: 50m
+    defaultCPURequest: 10m
     defaultMemoryRequest: 50Mi
     defaultCPULimit: 200m
     defaultMemoryLimit: 200Mi
@@ -61,7 +61,7 @@ core:
       plantd-app: studio
     defaultReplicas: 1
     defaultImage: ghcr.io/carnegiemellon-plantd/plantd-studio:latest
-    defaultCPURequest: 50m
+    defaultCPURequest: 10m
     defaultMemoryRequest: 50Mi
     defaultCPULimit: 200m
     defaultMemoryLimit: 200Mi
@@ -75,8 +75,8 @@ core:
     defaultVersion: v2.51.2
     defaultScrapeInterval: 15s
     defaultReplicas: 1
-    defaultCPURequest: 100m
-    defaultMemoryRequest: 100Mi
+    defaultCPURequest: 10m
+    defaultMemoryRequest: 50Mi
     defaultCPULimit: 400m
     defaultMemoryLimit: 400Mi
     servicePortName: prom-http
@@ -85,7 +85,7 @@ core:
     defaultImage: quay.io/thanos/thanos:v0.34.1
     defaultVersion: v0.34.1
     sidecar:
-      defaultCPURequest: 50m
+      defaultCPURequest: 10m
       defaultMemoryRequest: 50Mi
       defaultCPULimit: 200m
       defaultMemoryLimit: 200Mi
@@ -96,7 +96,7 @@ core:
       labels:
         plantd-app: thanos-store
       defaultReplicas: 1
-      defaultCPURequest: 50m
+      defaultCPURequest: 10m
       defaultMemoryRequest: 50Mi
       defaultCPULimit: 200m
       defaultMemoryLimit: 200Mi
@@ -115,7 +115,7 @@ core:
       labels:
         plantd-app: thanos-compactor
       defaultReplicas: 1
-      defaultCPURequest: 50m
+      defaultCPURequest: 10m
       defaultMemoryRequest: 50Mi
       defaultCPULimit: 200m
       defaultMemoryLimit: 200Mi
@@ -130,7 +130,7 @@ core:
       labels:
         plantd-app: thanos-querier
       defaultReplicas: 1
-      defaultCPURequest: 50m
+      defaultCPURequest: 10m
       defaultMemoryRequest: 50Mi
       defaultCPULimit: 200m
       defaultMemoryLimit: 200Mi
@@ -148,7 +148,7 @@ core:
       plantd-app: redis
     defaultReplicas: 1
     defaultImage: redis/redis-stack-server:7.2.0-v10
-    defaultCPURequest: 50m
+    defaultCPURequest: 10m
     defaultMemoryRequest: 50Mi
     defaultCPULimit: 400m
     defaultMemoryLimit: 400Mi
@@ -157,7 +157,7 @@ core:
     containerPort: 6379
     servicePortName: resp
     servicePort: 6379
-    path: /data
+    path: /data # Default path where redis-stack-server stores data
   openCost:
     name: plantd-opencost
     labels:
@@ -166,8 +166,8 @@ core:
     defaultImage: quay.io/kubecost1/kubecost-cost-model:latest
     defaultCPURequest: 10m
     defaultMemoryRequest: 50Mi
-    defaultCPULimit: 500m
-    defaultMemoryLimit: 500Mi
+    defaultCPULimit: 400m
+    defaultMemoryLimit: 400Mi
     containerPortName: opencost
     containerPort: 9003
     servicePortName: opencost
@@ -176,8 +176,8 @@ core:
       defaultImage: quay.io/kubecost1/opencost-ui:1.105.2
       defaultCPURequest: 10m
       defaultMemoryRequest: 50Mi
-      defaultCPULimit: 500m
-      defaultMemoryLimit: 500Mi
+      defaultCPULimit: 400m
+      defaultMemoryLimit: 400Mi
       containerPortName: opencost-ui
       containerPort: 9090
       servicePortName: opencost-ui
